# Integral_Image

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  install_from_docker.sh
include/: command_parser.h  config.h  file_handler.h  image.h  integral.h  message.h  multithreaded_integral.h  utils.h  version.h
source/: command_parser.cpp  config.cpp  file_handler.cpp  integral.cpp  main.cpp  multithreaded_integral.cpp  utils.cpp
test/source/: test_integral.cpp  test_mat_matches.cpp  test_sum.cpp
